# PC-usage-tracker

./: .gitignore  CMakeLists.txt  README.md  settings.ini  stylesheet.сss
src/: app.qrc  charts.cc  db.cc  events.cc  log.cc  main.cc  notifications.cc  settings.cc  timetracker.cc  timetracker.hpp  tracking.cc  tray.cc
src/clock/: digitalclock.cc  digitalclock.hpp
src/timer/: timer.cc  timer.hpp
ui/: timetracker.ui
